syntax = "proto3";

option go_package = "./;pb";

package pb;

// 链码ID，由链码的路径，名称和版本号构成
message ChaincodeID {
  string Path    = 1;
  string Name    = 2;
  string Version = 3;
}

message ChaincodeInput {
  repeated bytes Args   = 1;
  bool           IsInit = 2;
}

message ChaincodeSpec {
  ChaincodeID    ChaincodeID = 1;
  ChaincodeInput Input       = 2;
  int32          Timeout     = 3;
}











